src/_x
gcc -c -o hard_code_config.o hard_code_config.c -g -DDEBUG   -std=gnu99 -Wall -fPIC -W -Waggregate-return -Wcast-align -Wmissing-prototypes -Wnested-externs -Wshadow -Wwrite-strings -pedantic  -DLOCAL_DEPLOY   -I. -I../libevent-2.0.22-stable/include/event2/ -I../libevent-2.0.22-stable/include/ -I../statsd-c-client-master/ -I../lua-5.1.3/src/ -I../curl-7.51.0/include/ -I../curl-7.51.0/include/curl/ 
hard_code_config.c:5:1: warning: no previous prototype for ‘hard_code_config’ [-Wmissing-prototypes]
 hard_code_config()
 ^~~~~~~~~~~~~~~~
hard_code_config.c: In function ‘hard_code_config’:
hard_code_config.c:9:23: error: assignment to expression with array type
   strcpy(g_log_server = "localhost");
                       ^
hard_code_config.c:9:3: error: too few arguments to function ‘strcpy’
   strcpy(g_log_server = "localhost");
   ^~~~~~
In file included from ab_incs.h:7:0,
                 from hard_code_config.c:1:
/usr/include/string.h:129:14: note: declared here
 extern char *strcpy (char *__restrict __dest, const char *__restrict __src)
              ^~~~~~
hard_code_config.c:11:20: error: assignment to expression with array type
   strcpy(g_log_url = "Log");
                    ^
hard_code_config.c:11:3: error: too few arguments to function ‘strcpy’
   strcpy(g_log_url = "Log");
   ^~~~~~
In file included from ab_incs.h:7:0,
                 from hard_code_config.c:1:
/usr/include/string.h:129:14: note: declared here
 extern char *strcpy (char *__restrict __dest, const char *__restrict __src)
              ^~~~~~
hard_code_config.c:12:27: error: assignment to expression with array type
   strcpy(g_log_health_url = "Ignore");
                           ^
hard_code_config.c:12:3: error: too few arguments to function ‘strcpy’
   strcpy(g_log_health_url = "Ignore");
   ^~~~~~
In file included from ab_incs.h:7:0,
                 from hard_code_config.c:1:
/usr/include/string.h:129:14: note: declared here
 extern char *strcpy (char *__restrict __dest, const char *__restrict __src)
              ^~~~~~
hard_code_config.c:14:10: error: ‘g_dim_server’ undeclared (first use in this function); did you mean ‘g_ss_server’?
   strcpy(g_dim_server = "localhost");
          ^~~~~~~~~~~~
          g_ss_server
hard_code_config.c:14:10: note: each undeclared identifier is reported only once for each function it appears in
hard_code_config.c:14:3: error: too few arguments to function ‘strcpy’
   strcpy(g_dim_server = "localhost");
   ^~~~~~
In file included from ab_incs.h:7:0,
                 from hard_code_config.c:1:
/usr/include/string.h:129:14: note: declared here
 extern char *strcpy (char *__restrict __dest, const char *__restrict __src)
              ^~~~~~
hard_code_config.c:15:3: error: ‘g_dim_port’ undeclared (first use in this function); did you mean ‘g_ss_port’?
   g_dim_port = 8024;
   ^~~~~~~~~~
   g_ss_port
hard_code_config.c:16:10: error: ‘g_dim_url’ undeclared (first use in this function); did you mean ‘g_dim_port’?
   strcpy(g_dim_url = "session");
          ^~~~~~~~~
          g_dim_port
hard_code_config.c:16:3: error: too few arguments to function ‘strcpy’
   strcpy(g_dim_url = "session");
   ^~~~~~
In file included from ab_incs.h:7:0,
                 from hard_code_config.c:1:
/usr/include/string.h:129:14: note: declared here
 extern char *strcpy (char *__restrict __dest, const char *__restrict __src)
              ^~~~~~
hard_code_config.c:17:10: error: ‘g_dim_health_url’ undeclared (first use in this function); did you mean ‘g_ss_health_url’?
   strcpy(g_dim_health_url = "api/v1/health_check");
          ^~~~~~~~~~~~~~~~
          g_ss_health_url
hard_code_config.c:17:3: error: too few arguments to function ‘strcpy’
   strcpy(g_dim_health_url = "api/v1/health_check");
   ^~~~~~
In file included from ab_incs.h:7:0,
                 from hard_code_config.c:1:
/usr/include/string.h:129:14: note: declared here
 extern char *strcpy (char *__restrict __dest, const char *__restrict __src)
              ^~~~~~
hard_code_config.c:22:24: error: assignment to expression with array type
   strcpy(g_statsd_host = "localhost");
                        ^
hard_code_config.c:22:3: error: too few arguments to function ‘strcpy’
   strcpy(g_statsd_host = "localhost");
   ^~~~~~
In file included from ab_incs.h:7:0,
                 from hard_code_config.c:1:
/usr/include/string.h:129:14: note: declared here
 extern char *strcpy (char *__restrict __dest, const char *__restrict __src)
              ^~~~~~
hard_code_config.c:24:23: error: assignment to expression with array type
   strcpy(g_statsd_inc = "nw.metrics.ab.requests");
                       ^
hard_code_config.c:24:3: error: too few arguments to function ‘strcpy’
   strcpy(g_statsd_inc = "nw.metrics.ab.requests");
   ^~~~~~
In file included from ab_incs.h:7:0,
                 from hard_code_config.c:1:
/usr/include/string.h:129:14: note: declared here
 extern char *strcpy (char *__restrict __dest, const char *__restrict __src)
              ^~~~~~
hard_code_config.c:25:26: error: assignment to expression with array type
   strcpy(g_statsd_timing = "nw.metrics.ab.request_time");
                          ^
hard_code_config.c:25:3: error: too few arguments to function ‘strcpy’
   strcpy(g_statsd_timing = "nw.metrics.ab.request_time");
   ^~~~~~
In file included from ab_incs.h:7:0,
                 from hard_code_config.c:1:
/usr/include/string.h:129:14: note: declared here
 extern char *strcpy (char *__restrict __dest, const char *__restrict __src)
              ^~~~~~
hard_code_config.c:34:10: error: ‘g_dev_file’ undeclared (first use in this function); did you mean ‘g_devices’?
   strcpy(g_dev_file = "opt/ab/device.csv");
          ^~~~~~~~~~
          g_devices
hard_code_config.c:34:3: error: too few arguments to function ‘strcpy’
   strcpy(g_dev_file = "opt/ab/device.csv");
   ^~~~~~
In file included from ab_incs.h:7:0,
                 from hard_code_config.c:1:
/usr/include/string.h:129:14: note: declared here
 extern char *strcpy (char *__restrict __dest, const char *__restrict __src)
              ^~~~~~
hard_code_config.c:35:31: error: assignment to expression with array type
   strcpy(g_ua_to_dev_map_file = "opt/ab/ua_to_dev.bin";
                               ^
hard_code_config.c:35:55: error: expected ‘)’ before ‘;’ token
   strcpy(g_ua_to_dev_map_file = "opt/ab/ua_to_dev.bin";
                                                       ^
hard_code_config.c:35:3: error: too few arguments to function ‘strcpy’
   strcpy(g_ua_to_dev_map_file = "opt/ab/ua_to_dev.bin";
   ^~~~~~
In file included from ab_incs.h:7:0,
                 from hard_code_config.c:1:
/usr/include/string.h:129:14: note: declared here
 extern char *strcpy (char *__restrict __dest, const char *__restrict __src)
              ^~~~~~
hard_code_config.c:37:1: error: expected ‘;’ before ‘}’ token
 }
 ^
make: *** [hard_code_config.o] Error 1
